Mon Oct 20 13:38:16 2003  Jonathan Blandford  <jrb@gnome.org>
 
	* src/Makefile.am (INCLUDES): remove GTK and
	GNOME_DISABLE_DEPRECATED

	* src/file-manager/Makefile.am (INCLUDES): ditto

	* components/emblem/Makefile.am (INCLUDES): ditto

2003-10-20  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Change back orbit req.

=== nautilus 2.5.0 ===

2003-10-20  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update
	
	* configure.in:
	Require new eel & orbit
	Bump to 2.5.0

2003-10-17  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-manage-views.c:
	Use themed icon for desktop.
	Patch from Luca Ferretti <elle.uca@libero.it>

2003-10-17  Alexander Larsson  <alexl@redhat.com>

	* components/image_properties/nautilus-image-properties-view.c:
	Split up camera & maker.
	Don't center text
	Allow selection of text.
	Parts of patch from hugo.
	
2003-10-14  Alexander Larsson  <alexl@redhat.com>

	* acconfig.h:
	* components/image_properties/Makefile.am:
	* components/image_properties/nautilus-image-properties-view.c:
	* configure.in:
	Support for exif info.
	Patch from Hugo <nautilus@starbreeze.knoware.nl>

2003-10-11  Dennis cranston <dennis_cranston at yahoo com>

       * src/file-manager/fm-icon-view.c:  Fixes to the 'Link here' 
       and 'Cancel' drag and drop actions.

2003-10-13  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-list-view.c (cell_renderer_edited):
	Don't rename files to "". Fixes #124420
	Based on patch from mwehner@tfh-berlin.de.

2003-10-11  Dave Camp  <dave@ximian.com>

	* src/Makefile.am: Add nautilus-location-dialog.[ch] and
	nautilus-location-entry.[ch]
	* src/nautilus-location-bar.c: (editable_event_after_callback),
	(nautilus_location_bar_init):
	* src/nautilus-location-entry.c: Moved the tab-completing entry
	into its own widget.
	* src/nautilus-location-dialog.c
	* src/nautilus-spatial-window.c: (real_prompt_for_location),
	(nautilus_spatial_window_class_init): Add an Open Location 